<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="15dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/current_time"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/covid_19_indonesia_cases"
                    android:textSize="30dp"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/by_tedy_kurnia_ramdhani"
                    android:textSize="12dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/load"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/provinsiList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/txt"
                    android:layout_centerHorizontal="true" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</ScrollView>